# ChangeLog for net-im/psi-birthdayreminder
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  -psi-birthdayreminder-0.2.6_pre.ebuild,
  +psi-birthdayreminder-0.2.6_pre3076.ebuild:
  fix version

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-birthdayreminder-0.2.6_pre.ebuild:
  version bump

  12 Mar 2010; <slep@gentoo.org> psi-birthdayreminder-9999.ebuild:
  QA repoman fix

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
