@@ -1,5 +1,7 @@
 DIST psi-birthdayreminder-0.2.6_pre3076.tar.xz 10068 RMD160 6c57a2c8c82f21fbcf8276069b37c27a78464218 SHA1 289f8105326b1a1e52da4be68449cf062252ec79 SHA256 8d27eedd29ce1b9a980b4aa8422e4a22254380e06a9bd89524ee3986c75948f5
+DIST psi-birthdayreminder-0.3.0_pre3183.tar.xz 9124 RMD160 2caeb4402595edb5d88a87ae5b192c06a5bb8cec SHA1 44d5acd1f9312701c1d2f70b9ab29611551e7baf SHA256 cb1c91439e25e2aecc4249a6ee02ce801a0ef38910de5d938d6f7485e57705f3
 EBUILD psi-birthdayreminder-0.2.6_pre3076.ebuild 240 RMD160 6df5ce871966ab64c74e68a4f8032e0859bf1dfa SHA1 758e16a282e55f2944fa7b887f9c533eb66a3e08 SHA256 9ab79efaa711d37eedca2dd7838b0e6a9852bc9cd0a08890c32b6ac7efb7ba42
+EBUILD psi-birthdayreminder-0.3.0_pre3183.ebuild 240 RMD160 6df5ce871966ab64c74e68a4f8032e0859bf1dfa SHA1 758e16a282e55f2944fa7b887f9c533eb66a3e08 SHA256 9ab79efaa711d37eedca2dd7838b0e6a9852bc9cd0a08890c32b6ac7efb7ba42
 EBUILD psi-birthdayreminder-9999.ebuild 231 RMD160 b14446ac969877e42c02ab111fd2ea8b55c8e458 SHA1 75b13ac28dc4d026384b8074f1a95dcb271112fc SHA256 25fab667c061ee5efb0ff368ae7487f6150e4d544d3c89a7da9aaec4c93d73ac
-MISC ChangeLog 544 RMD160 e664c1e514d7a8199e6f350a70f1ccb84574da2f SHA1 9334aaa91776399910e2224fa76e888a98432cd9 SHA256 2c70e344362c04ec395e402adeb47dc29ff190cf655c57c30520ea64fbd5f83d
+MISC ChangeLog 649 RMD160 1cba498b4cecd37ce7619d6f9e60cf55b610aea1 SHA1 bf8ca03798dc5b36ec22feff946715092b792371 SHA256 41060f5b511571d6f1860fb323c3da3946bd22c70f02ad7fd334774ec05cf365
 MISC metadata.xml 451 RMD160 622920ffa2cdd86da264e3111a271915c515716c SHA1 51ed17dd366f25f4beff55912e2beed44e1d15c6 SHA256 ec2d1059445df2f1ad1b3e925bba942af207d2ac8ffc1baafb38e8cb165a5a7c
