@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2010; Nikoli <nikoli@lavabit.com>
+  +psi-birthdayreminder-0.3.0_pre3183.ebuild:
+  version bump
+
   21 Oct 2010; Nikoli <nikoli@lavabit.com>
   -psi-birthdayreminder-0.2.6_pre.ebuild,
   +psi-birthdayreminder-0.2.6_pre3076.ebuild:
